Modernize and clean up